# All-AI-Design-Studio

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
backend/: .env.example  pyproject.toml
backend/src/design_team/: __init__.py  main.py  session_manager.py
backend/src/design_team/agents/: __init__.py  base.py  design_manager.py  junior_designer.py  senior_designer.py  visual_designer.py
backend/src/design_team/api/: chat.py  models.py  routes.py
backend/src/design_team/graph/: __init__.py  builder.py  edges.py  emit_bridge.py  formatting.py  nodes.py  session_manager_lg.py  state.py
backend/src/design_team/prompts/: __init__.py  junior.py  manager.py  senior.py  visual.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/models/: character.glb
frontend/src/: App.tsx  index.css  main.tsx  types.ts  vite-env.d.ts
frontend/src/components/: ActivityFeed.tsx  AgentCard.tsx  AgentGraph.tsx  AvatarPlayground.tsx  ConfirmationPrompt.tsx  DesignViewer.tsx  FullLog.tsx  GraphLabels.tsx  LeftPanel.tsx  PlaygroundPanel.tsx  RightPanel.tsx
frontend/src/components/playground/: PlaygroundChat.tsx  PlaygroundOverlay.tsx
frontend/src/components/views/: AgentAvatar.tsx  BuildPhaseView.tsx  CheckpointReviewView.tsx  DashboardView.tsx  DesignPhaseView.tsx  (+5 more)
frontend/src/data/: agents.ts
frontend/src/hooks/: useSSEStream.ts
frontend/src/playground/: agents.ts  store.ts  types.ts
frontend/src/services/: playgroundGemini.ts
frontend/src/store/: useStore.ts
frontend/src/three/: SceneManager.ts
(+12 files in other folders)
